# fde-fitness-tracker

./: .env.example  CHANGELOG.md  PRD.md  README.md  create_issues.ps1  fitness.db  main.py  pyproject.toml  run.py
backend/: db_client.py  llm_service.py  main.py  schemas.py
backend/api/: dependencies.py
backend/api/routers/: generate.py  profile.py  workout.py
backend/core/: config.py
backend/tests/: test_api.py  test_db_client.py  test_llm_service.py
docs/plans/: refactor_plan.md  refactor_plan_config.md  refactor_plan_imports.md
frontend/: app.py
frontend/tests/: test_app.py
